--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -68,6 +68,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    {% javascript 'jquery' %}
     {% javascript 'bootstrap' %}
   </body>
 </html>
