--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load pipeline %}
+{% load active %}
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,10 +15,9 @@
 
     <!-- Bootstrap core CSS -->
     {% stylesheet 'bootstrap' %}
-    {% stylesheet 'starter-template' %}
 
     <!-- Custom styles for this template -->
-    <!--<link href="starter-template.css" rel="stylesheet">-->
+    {% stylesheet 'starter-template' %}
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -41,13 +41,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Gamestat</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!--<li class="{% active 'home' %}"><a href="{% url 'home' %}">Home</a></li>-->
+            <li class="{% active 'kbo' %}"><a href="{% url 'kbo' %}">KBO</a></li>
+            <li class="{% active 'contact' %}"><a href="{% url 'contact' %}">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
