--- a/ui/templates/ui/home.html
+++ b/ui/templates/ui/home.html
@@ -1,6 +1,6 @@
 {% extends "ui/base.html" %}
 
 {% block content %}
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <!--<h1>Gamestat</h1>-->
+        <p class="lead">나는 아무 생각이 없다.<br/>왜냐하면 아무 생각이 없기 때문이다.</p>
 {% endblock %}
