--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -45,7 +45,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="{% active_top 'kbo' %}"><a href="{% url 'kbo' %}">KBO</a></li>
+            <li class="{% active_top 'kbo' %}"><a href="{% url 'kbo:home' %}">KBO</a></li>
             <li class="{% active_top 'contact' %}"><a href="{% url 'contact' %}">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
