--- a/kbo/templates/kbo/base.html
+++ b/kbo/templates/kbo/base.html
@@ -1,15 +1,24 @@
 {% extends "ui/base.html" %}
 
+{% load pipeline %}
+{% load active %}
+
+{% block header %}
+
+{% stylesheet 'kbo' %}
+
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Export</a></li>
+            <li class="{% active_side 'kbo:overview' True%}"><a href="{% url 'kbo:overview' %}">Overview</a></li>
+            <li class="{% active_side 'kbo:scores' %}"><a href="{% url 'kbo:scores' %}">Scores</a></li>
+            <li class="{% active_side 'kbo:standings' %}"><a href="{% url 'kbo:standings' %}">Standings</a></li>
           </ul>
+          <!--
           <ul class="nav nav-sidebar">
             <li><a href="">Nav item</a></li>
             <li><a href="">Nav item again</a></li>
@@ -22,6 +31,7 @@
             <li><a href="">One more nav</a></li>
             <li><a href="">Another nav item</a></li>
           </ul>
+          -->
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             {% block kbo_content %}{% endblock %}
