--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -18,6 +18,7 @@
 
     <!-- Custom styles for this template -->
     {% stylesheet 'starter-template' %}
+    {% block header %}{% endblock %}
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -44,8 +45,8 @@
           <a class="navbar-brand" href="{% url 'home' %}">Gamestat</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="{% active_top 'kbo' %}"><a href="{% url 'kbo:home' %}">KBO</a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="{% active_top 'kbo' %}"><a href="{% url 'kbo:overview' %}">KBO</a></li>
             <li class="{% active_top 'contact' %}"><a href="{% url 'contact' %}">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
