--- a/kbo/templates/kbo/scores.html
+++ b/kbo/templates/kbo/scores.html
@@ -1,6 +1,32 @@
 {% extends "kbo/base.html" %}
 
 {% block kbo_content %}
-scores
-{% endblock %}
 
+<h2 class="sub-header">Scores</h2>
+<div class="table-responsive">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Away</th>
+        <th></th>
+        <th></th>
+        <th>Home</th>
+      </tr>
+    </thead>
+
+    <tbody>
+{% for score in scores %}
+      <tr>
+        <td>{{ score.away_team }}</td>
+        <td>{{ score.away_score }}</td>
+        <td>:</td>
+        <td>{{ score.home_score }}</td>
+        <td>{{ score.home_team }}</td>
+      </tr>
+{% endfor %}
+    </tbody>
+  <table>
+<div>
+
+{% endblock %}
