date option activated

--- a/kbo/templates/kbo/scores.html
+++ b/kbo/templates/kbo/scores.html
@@ -2,7 +2,7 @@
 
 {% block kbo_content %}
 
-<h2 class="sub-header">Scores</h2>
+<h2 class="sub-header">Scores @ {{ basedate }} </h2>
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
