scores page almost done

--- a/kbo/templates/kbo/base.html
+++ b/kbo/templates/kbo/base.html
@@ -6,6 +6,7 @@
 {% block header %}
 
 {% stylesheet 'kbo' %}
+{% stylesheet 'datepicker' %}
 
 {% endblock %}
 
@@ -40,3 +41,8 @@
     </div>
 
 {% endblock %}
+
+{% block javascripts %}
+{% javascript 'datepicker' %}
+{% endblock %}
+
