--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -70,5 +70,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     {% javascript 'jquery' %}
     {% javascript 'bootstrap' %}
+    {% block javascripts %}{% endblock %}
   </body>
 </html>
