--- a/kbo/templates/kbo/standings.html
+++ b/kbo/templates/kbo/standings.html
@@ -1,6 +1,7 @@
 {% extends "kbo/base.html" %}
 
 {% load pipeline %}
+{% load kbo_formatters %}
 
 {% block kbo_content %}
 <h2 class="sub-header">Standings</h2>
@@ -34,10 +35,10 @@
         <td>{{ standing.wins }}</td>
         <td>{{ standing.draws }}</td>
         <td>{{ standing.losses }}</td>
-        <td>{{ standing.gb }}</td>
-        <td>{{ standing.pct }}</td>
-        <td>{{ standing.streak }}</td>
-        <td>{{ standing.l10 }}</td>
+        <td>{{ standing.gb | format_gb }}</td>
+        <td>{{ standing.pct | format_pct }}</td>
+        <td>{{ standing.streak | format_streak }}</td>
+        <td>{{ standing.l10 | format_l10 }}</td>
       </tr>
 {% endfor %}
     </tbody>
