--- a/kbo/templates/kbo/standings.html
+++ b/kbo/templates/kbo/standings.html
@@ -11,7 +11,7 @@
     <thead>
       <tr>
         <th>
-          <button type="button" class="btn btn-default" aria-label="Left Align">
+          <button type="button" class="prevdate btn btn-default" aria-label="Left Align">
             {% if prevDate %}
             {{ prevDate | date:'Y/m/d' }} 
             {% else %}
@@ -27,7 +27,7 @@
           </div>
         </th>
         <th>
-          <button type="button" class="btn btn-default" aria-label="Left Align">
+          <button type="button" class="nextdate btn btn-default" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-right"></span>
             {% if nextDate %}
             {{ nextDate | date:'Y/m/d' }}
@@ -81,12 +81,25 @@
 {% block javascripts %}
 {% javascript 'datepicker' %}
 <script>
+{% if prevDate %}
+$('.btn.prevdate').click(function(event) {
+    window.location.href = '{% url 'kbo:standings' %}'.concat( {{ prevDate | date:'Ymd' }}  )
+})
+{% endif %}
+
+{% if nextDate %}
+$('.btn.nextdate').click(function(event) {
+    window.location.href = '{% url 'kbo:standings' %}'.concat( {{ nextDate | date:'Ymd' }}  )
+})
+{% endif %}
+
 $('.input-group.date').datepicker({
   format: 'yyyy/mm/dd',
   startDate: '{{ startDate.year }}/{{ startDate.month }}/{{ startDate.day }}',
   endDate: '{{ endDate.year }}/{{ endDate.month }}/{{ endDate.day }}',
   orientation: 'bottom',
 });
+
 $('.input-group.date').on("changeDate", function(event) {
     d = new Date($('.input-group.date').datepicker('getDate'))
     window.location.href = '{% url 'kbo:standings' %}'.concat( d.yyyymmdd() )
