test graph added

--- a/kbo/templates/kbo/base.html
+++ b/kbo/templates/kbo/base.html
@@ -15,9 +15,9 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="{% active_side 'kbo:overview' True%}"><a href="{% url 'kbo:overview' %}">Overview</a></li>
             <li class="{% active_side 'kbo:scores' %}"><a href="{% url 'kbo:scores' %}">Scores</a></li>
             <li class="{% active_side 'kbo:standings' %}"><a href="{% url 'kbo:standings' %}">Standings</a></li>
+            <li class="{% active_side 'kbo:graphs' %}"><a href="{% url 'kbo:graphs' %}">Graphs</a></li>
           </ul>
           <!--
           <ul class="nav nav-sidebar">
