--- a/kbo/templates/kbo/scores.html
+++ b/kbo/templates/kbo/scores.html
@@ -10,7 +10,7 @@
     <thead>
       <tr>
         <th>
-          <button type="button" class="prevdate btn btn-default" aria-label="Left Align">
+          <button type="button" class="prevdate btn btn-default">
             {% if prevDate %}
             {{ prevDate | date:'Y/m/d' }} 
             {% else %}
@@ -26,7 +26,7 @@
           </div>
         </th>
         <th>
-          <button type="button" class="nextdate btn btn-default" aria-label="Left Align">
+          <button type="button" class="nextdate btn btn-default">
             <span class="glyphicon glyphicon-chevron-right"></span>
             {% if nextDate %}
             {{ nextDate | date:'Y/m/d' }}
