--- a/kbo/templates/kbo/versus.html
+++ b/kbo/templates/kbo/versus.html
@@ -79,7 +79,7 @@
     <tbody>
 {% for score in scores %}
       <tr>
-        <td>{{ score.date | date:'Y/m/d' }}</td>
+        <td>{{ score.date | date:'Y/m/d' }}{% if score.seq != 0 %} (DH{{ score.seq }}){% endif %}</td>
         <td>{{ score.away_team }}</td>
         <td>{{ score.away_score }}</td>
         <td>:</td>
